--- a/phone/src/config.autogen.json
+++ b/phone/src/config.autogen.json
@@ -31,6 +31,9 @@
     "generateProfileNameFromUsers": true,
     "allowEdtiableProfileName": true
   },
+  "email": {
+    "provider": "project-error.dev"
+  },
   "bank": {
     "showNotifications": true
   },
