Snapshot is mad

--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
-  "dependencies": {
-    "fivem-nui-react-lib": "C:/Users/Fran/Desktop/fivem-nui-react-lib/"
-  }
+  "dependencies": {}
 }
